# claude-smart

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  release-please-config.json
.claude/: settings.json
.claude/skills/release/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release-please.yml
docs/: 2026-06-19-cas-absorption-profile-registry.md  2026-06-19-csm-cli-surface-design.md  2026-06-19-csm-usage-and-interactive-cas-edit.md  windows-blocking-checks.md
examples/: usage-collector.sh
src/: config.rs  main.rs  paths.rs  provision.rs  statusline.rs
src/account/: mod.rs  profiles.rs  reset.rs  scoring.rs
src/cas/: edit.rs  mod.rs  platform.rs
src/cli/: completions.rs  mod.rs  parser.rs
src/hook/: detect.rs  mod.rs  notify.rs  stop.rs
src/picker/: account.rs  engine.rs  fzf.rs  mod.rs  session.rs
src/platform/: launcher.rs  mod.rs  pid.rs  posix.rs  proc_check.rs  relaunch.rs  windows.rs
src/reaper/: kill.rs  mod.rs  scan.rs
src/session/: alias.rs  liveness.rs  mod.rs  scan.rs
src/sidecar/: mod.rs
src/usage/: mod.rs  model.rs  report.rs  transport.rs
tests/: no_private_names.rs
